Revert "Continue the story"
This reverts commit 071dfea0f0fa02db5c86d8000d17c7e71cc1e82e.

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
                         <input type="submit" value="Let the magic happen">
                     </div>
                     {% autoescape false %}
-                        <p style ="font-style: italic;color:rgb(148, 148, 148);size:12px;display:inline">{{old_prompt_text}}</p>
+                        <p style ="font-style: italic;color:rgb(148, 148, 148);size:12px;display:inline">{{prompt_text}}</p>
                         <p style="color:#FFFFFF;size:12px;display:inline">{{result_text}}</p>
                     {% endautoescape %}
                 </form>
