--- a/templates/index.html
+++ b/templates/index.html
@@ -43,8 +43,8 @@
                         <input type="submit" value="Let the magic happen">
                     </div>
                     {% autoescape false %}
-                        <p style ="font-style: italic;color:rgb(148, 148, 148);size:12px;display:inline">{{prompt_text}}</p>
-                        <p style="color:#FFFFFF;size:12px;display:inline">{{result_text}}</p>
+                        <pre style ="font-style: italic;color:rgb(148, 148, 148);size:12px;">{{prompt_text}}</p>
+                        <pre style="color:#FFFFFF;size:12px;">{{result_text}}</p>
                     {% endautoescape %}
                 </form>
             </div>
