--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
             <div class="hero-content">
                 <h1>Welcome to the world of GPT-2</h1>
                 <p style="color:#FFFFFF">Enter a writing prompt in the field below</p>
-                <p style="color:#FFFFFF">The last part of the result from GPT2 will become the new prompt, so you can continue the story</p>
+                <p style="color:#FFFFFF">The last part of the output will become the new prompt, so you can continue the story</p>
                 <form method="POST" action="/">
                     <div stype="width: 50%">
                         <label autocomplete="off" for="prompt"></label>
